2011-04-06  Eric Blake  <eblake@redhat.com>

	binary-io: relicense under LGPLv2+
	* modules/binary-io (License): Relax to LGPLv2+.
	Requested for libvirt, and required by pipe2.

2011-04-05  Bruno Haible  <bruno@clisp.org>

	pipe2: Relicense under LGPLv2+.
	* modules/pipe2 (License): Change to LGPLv2+.
	Requested by Eric Blake, for libvirt.

2011-04-05  Simon Josefsson  <simon@josefsson.org>

	* top/maint.mk (sc_prohibit_empty_lines_at_EOF): Don't trigger
	sc_space_tab check.

2011-04-01  Bruno Haible  <bruno@clisp.org>

	wmemchr, wcschr, wcsrchr, wcspbrk, wcsstr: Avoid errors in C++ mode.
	* lib/wchar.in.h (wmemchr, wcschr, wcsrchr, wcspbrk, wcsstr): Use
	_GL_CXXALIAS_SYS_CAST2 instead of _GL_CXXALIAS_SYS. On glibc >= 2.10
	systems, use _GL_CXXALIASWARN1 instead of _GL_CXXALIASWARN.
	Reported by Bruce Korb <bruce.korb@gmail.com>.

2011-04-01  Bruno Haible  <bruno@clisp.org>

	wcpcpy, wcpncpy: Ensure declaration on glibc >= 2.13 systems.
	* m4/wcpcpy.m4 (gl_FUNC_WCPCPY): Require AC_USE_SYSTEM_EXTENSIONS.
	* m4/wcpncpy.m4 (gl_FUNC_WCPNCPY): Likewise.
	* modules/wcpcpy (Depends-on): Add extensions.
	* modules/wcpncpy (Depends-on): Likewise.
	* doc/posix-functions/wcpcpy.texi: Mention missing declaration on glibc
	systems.
	* doc/posix-functions/wcpncpy.texi: Likewise.
	* doc/posix-functions/wcwidth.texi: Likewise.

2011-03-31  Eric Blake  <eblake@redhat.com>

	nonblocking: fix mingw test failures
	* lib/nonblocking.c (set_nonblocking_flag): Succeed when clearing
	non-blocking flag on regular file.
	(get_nonblocking_flag): Set errno on invalid fd.
	* tests/test-nonblocking.c (main): Avoid test failure on
	directories if fchdir is not active.
	* modules/nonblocking-tests (Depends-on): Drop unused dependency.

2011-03-31  Bruno Haible  <bruno@clisp.org>

	Fix bug with gl_WARN_ON_USE_PREPARE, introduced on 2011-01-23.
	* m4/gnulib-common.m4 (gl_ASSERT_NO_GNULIB_POSIXCHECK): Hide the
	gl_WARN_ON_USE_PREPARE definition from 'aclocal'.