@@ -1,3 +1,9 @@
+2011-04-08  Eric Blake  <eblake@redhat.com>
+
+	fcntl-h: fix O_ACCMODE on cygwin
+	* doc/posix-headers/fcntl.texi (fcntl.h): Document the bug.
+	* lib/fcntl.in.h (O_ACCMODE): Fix it.
+
 2011-04-06  Eric Blake  <eblake@redhat.com>
 
 	binary-io: relicense under LGPLv2+
